# notchy

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README.vi.md  RECOVERY.md  ROADMAP.md  SCHEMA.md  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts  vitest.workspace.ts
messages/: en.json  vi.json
project.inlang/: project_id  settings.json
specs/: 2026-06-29-light-machine-rollout-design.md  2026-06-29-vietnamese-locale-design.md  2026-06-30-battle-tested-e2e-suite-design.md  2026-07-01-v0.1.x-quality-of-life-design.md
specs/notes/: 2026-07-01-v0.1.2.md
specs/plans/: 2026-06-29-light-machine-rollout.md  2026-06-29-vietnamese-locale.md  2026-06-30-battle-tested-e2e-suite.md  2026-07-01-v0.1.1-roll-overs-and-csv-profile-model.md  2026-07-01-v0.1.2-tray-quick-capture.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: errors.ts
src/lib/backup/: index.ts
src/lib/db/: in-memory.ts  index.ts  integrity.ts  pragmas.ts  service.ts
src/lib/stores/: accounts.svelte.ts  budgets.svelte.ts  categories.svelte.ts  db.svelte.ts  debts.svelte.ts  goals.svelte.ts  quick-refresh.ts  session.svelte.ts  settings.svelte.ts  toast.svelte.ts  transactions.svelte.ts
src/lib/utils/: account-type.ts  currency.ts  date.ts  errors.ts  id.ts  number_parse.ts  quick_parse.ts  sanitize.ts  tx-kind.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/accounts/: +page.svelte
src/routes/budgets/: +page.svelte
(+101 files in other folders)
