[package]
name = "notchy"
version = "0.1.0"
description = "A local-first personal finance application"
authors = ["hoangtu34"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "notchy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
